# sphinx-debuginfo

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
sphinx_debuginfo/: __init__.py
tests/: requirements.txt
tests/test_output/: test_output.py
tests/test_output/doc-test/test-root/: conf.py  index.rst
tests/test_output/test_output_/: test_html_output__debug_index_html_.html
