[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-debuginfo"
version = "0.1.0"
description = "A Sphinx extension to include debugging information in the output."
readme = "README.rst"
keywords = [ "debug", "sphinx",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/sphinx-debuginfo"
"Issue Tracker" = "https://github.com/sphinx-toolbox/sphinx-debuginfo/issues"
"Source Code" = "https://github.com/sphinx-toolbox/sphinx-debuginfo"

[tool.importcheck]
always = [ "sphinx_debuginfo",]

[tool.importcheck.config]
show = true
