[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "sphinx-debuginfo"
version = "0.2.1"
description = "A Sphinx extension to include debugging information in the output."
readme = "README.rst"
keywords = [ "debug", "sphinx", "sphinx-extension",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/sphinx-debuginfo"
"Issue Tracker" = "https://github.com/sphinx-toolbox/sphinx-debuginfo/issues"
"Source Code" = "https://github.com/sphinx-toolbox/sphinx-debuginfo"

[tool.importcheck]
always = [ "sphinx_debuginfo",]

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "sphinx_debuginfo"

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"

[tool.importcheck.config]
show = true
