[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "sphinx-debuginfo"
version = "0.2.1"
description = "A Sphinx extension to include debugging information in the output."
readme = "README.rst"
keywords = [ "debug", "sphinx", "sphinx-extension",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/sphinx-debuginfo"
"Issue Tracker" = "https://github.com/sphinx-toolbox/sphinx-debuginfo/issues"
"Source Code" = "https://github.com/sphinx-toolbox/sphinx-debuginfo"

[tool.importcheck]
always = [ "sphinx_debuginfo",]

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "sphinx_debuginfo"

[tool.mypy]
python_version = "3.6"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.importcheck.config]
show = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
